# moodboard

./: .gitignore  Cargo.toml  index.html  input-3f2f57d2bed3795d.css  input-9901e075e6c51596.css  input-9c408b8311bff4a9.css  input-de94e437c9844372.css  moodboard-1e215eb85c87bb6d.js  moodboard-3795086d22eda0c1.js  moodboard-3f2f40356c50b89f.js  moodboard-7fa8a6e1f4a3b00b.js  moodboard-88d0b71ccec65be8.js  moodboard-9af6b37210678a24.js  moodboard-c744c100a71ad215.js  moodboard-e17fce35517fa702.js  package.json  pnpm-lock.yaml  size.md  tailwind.config.js  todo.md
.cargo/: config.toml
.github/workflows/: deploy-page.yaml
assets/shaders/: sample.wgsl
game/: Cargo.toml
game/assets/shaders/: outline.wgsl
game/src/: border.rs  camera.rs  canvas.rs  color_swatch.rs  debug.rs  drag.rs  events.rs  hold.rs  item.rs  lib.rs  main.rs  post_it.rs  prelude.rs  select.rs  shared.rs  text.rs  ui.rs
game/src/select/: components.rs  mod.rs  utils.rs
game/src/theme/: colors.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  button.rs  control_panel.rs  main.rs  message_box.rs  moodboard.rs
src/icons/: mod.rs
web/: Cargo.toml
web/src/: lib.rs
