[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
bevy-inspector-egui = "0.21.0"
bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.10.0"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5.8"
rand = "0.8.5"

[features]
debug = []
